# vscit

./: .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-linux.yml  cmake-macos-arm.yml  cmake-macos-x64.yml  cmake-windows.yml
app/: CMakeLists.txt  app.cpp
include/cpu/: cpu.hpp
src/: CMakeLists.txt  cpu.cpp
tests/: CMakeLists.txt  testvscit.cpp
